--- a/index.html
+++ b/index.html
@@ -4,9 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
+    <script defer src="js/main.js"></script>
+    <title>Checkers Game</title>
 </head>
 <body>
+    <div class='board'>
+        <div class="white-board"> </div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="whitepeg"></div></div>
+
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
     
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
+
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>
+        <div class="black-board"><div class="blackpeg"></div></div>
+        <div class="white-board"></div>        
+    </div>
+    
+    <div class="wrapper">
+        <div class="Player1"><h4>Player 1 Score:</h4></div>
+        <div class="button"><br><button type="button" class="btn btn-dark">Play Again</button></div>
+        <div class="Player2"><h4>Player 2 Score:</h4></div>
+    </div>
 </body>
 </html>
