Modified game files

--- a/index.html
+++ b/index.html
@@ -12,78 +12,78 @@
 </head>
 <body>
     <h2><br>Welcome to the Checkers Game!</h2>
-    <h2>Now is Player 1 turn!</h3>
+    <h3></h3>
     <div class='board'>
-        <div class="white-board"> </div>
-        <div class="black-board"><div class="blue-peg"></div></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
+        <div class="white-board"></div>
+        <div class="black-board"></div>
 
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
 
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="blue-peg"></div></div>
+        <div class="black-board"></div>
 
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
     
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="empty"></div></div>
+        <div class="black-board"></div>
 
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
 
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
 
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>
-        <div class="black-board"><div class="gold-peg"></div></div>
+        <div class="black-board"></div>
         <div class="white-board"></div>        
     </div>
     
