--- a/index.html
+++ b/index.html
@@ -13,79 +13,7 @@
 <body>
     <h2><br>Welcome to the Checkers Game!</h2>
     <h3></h3>
-    <div class='board'>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-    
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>        
-    </div>
+    <div class='board'></div>
     
     <div class="wrapper">
         <div class="Player1"><h4>Player 1 Score:</h4></div>
