All files was updated

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,87 +11,21 @@
     <script defer src="js/main.js"></script>
     <title>Checkers Game</title>
 </head>
+
 <body>
     <h2><br>Welcome to the Checkers Game!</h2>
     <h3></h3>
-    <div class='board'>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
+    <div class='board'></div>
 
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-    
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>
-        <div class="black-board"></div>
-        <div class="white-board"></div>        
-    </div>
-    
     <div class="wrapper">
-        <div class="Player1"><h4>Player 1 Score:</h4></div>
+        <div class="Player1">
+            <h4>Player 1 Score:</h4>
+        </div>
         <div class="button"><br><button type="button" class="btn btn-dark">Play Again</button></div>
-        <div class="Player2"><h4>Player 2 Score:</h4></div>
+        <div class="Player2">
+            <h4>Player 2 Score:</h4>
+        </div>
     </div>
 </body>
+
 </html>
