--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
     <div class='board'></div>
     
     <div class="wrapper">
-        <div class="Player1"><h4>Player 1 Score:</h4></div>
+        <div class="Player1">
+            <h4>Player 1 Score:</h4>
+            <span class="blue-score"></span>
+        </div>
+
         <div class="button"><br><button type="button" class="btn btn-dark">Play Again</button></div>
-        <div class="Player2"><h4>Player 2 Score:</h4></div>
+        
+        <div class="Player2">
+            <h4>Player 2 Score:</h4>
+            <span class="gold-score"></span>
+        </div>
     </div>
 </body>
 </html>
